Compilador_Final/tests/invalid/test_e10_drone_duplicado.drone
// Test con error 10: drone declarado dos veces (error semántico)
drone halcon;
drone halcon;
zona base(0, 0);

mision duplicado {
    despegar halcon;
    aterrizar halcon;
}
